# RDB_NoRDB_repeating

./: .gitignore  orm_async_session.py  orm_core_.py  orm_session_.py  orm_session_new_api.py  pyproject.toml  queries.py
conf/: db_connection.py  models.py
ht/: alembic.ini  queries.py
ht/config/: db_connect.py  models_.py
ht/crud/: create.py  main.py  read.py  remove.py  update.py
ht/migrations_/: env.py
ht/migrations_/versions/: 723585279508_updated_fields_in_tables.py  72fa00aee736_init.py
ht/seeds/: initial_const.py  seed_grades.py  seed_groups.py  seed_main.py  seed_students.py  seed_subjects.py  seed_teachers.py
migrations/: env.py
migrations/versions/: 0377ffbc58cf_add_table_contact.py  2612df439a2c_init.py
seeds/: add_contacts.py  init.py  update_remove.py
