[tool.poetry]
name = "module-7"
version = "0.1.0"
description = ""
authors = ["AntonHran <127331857+KristinaHranovska@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
